[project]
name = "call-me-maybe"
version = "0.2.0"
description = "Function calling with constrained, schema-shaped decoding using Qwen/Qwen3-0.6B"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26,<3.0",
    "pydantic>=2.0,<3.0",
    "llm-sdk",
]


[dependency-groups]
dev = [
    "flake8>=7.0.0,<8.0.0",
    "mypy>=1.10.0,<2.0.0",
    "pytest>=8.0.0,<9.0.0",
]


[tool.uv.sources]
llm-sdk = { path = "./llm_sdk", editable = true }


[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
exclude = ["llm_sdk", ".venv", "data/output"]


[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".venv", "__pycache__", ".git", "data/output"]


[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.hatch.build.targets.wheel]
packages = ["src"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
